# abra_back

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  Dockerfile  Dockerfile.alembic  Dockerfile.population  Dockerfile.tests  Makefile  README.md  alembic.ini  desktop.ini  docker-compose.alembic.yml  docker-compose.app.prod.yml  docker-compose.app.yml  docker-compose.db.yml  docker-compose.population.yml  docker-compose.prod.yml  docker-compose.tests.db.yml  docker-compose.tests.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  queries.txt  requirements.txt  ruff.toml  settings.py  start.sh
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: feature.md  fix.md  refactoring.md
.github/workflows/: dev_deploy.yml  main.yaml  pull.yaml  push.yaml  tests.yml
.guthub/workflows/: python copy.yaml  python.yaml
alembic/: env.py
alembic/versions/: init.py
app/: __init__.py  admin.py  app.py  exc.py  exceptions.py  logger.py  logging.log.1  logging.log.2  main.py  metadata.py  populate.py  settings.py  typing_.py
app/api/: __init__.py  api.py  consts.py  queries.py  router.py  utils.py
app/classes/: enums.py  request_models.py  response_models.py
app/common/: enums.py  exception_handlers.py  exceptions.py
app/core/: __init__.py  depends.py  exceptions.py  logger.py  security.py  settings.py  tools.py
app/database/: __init__.py  init.py  models.py
app/enums/: __init__.py  category_property_type.py  category_variation_type.py  currency.py  format_image.py  login.py  order_status.py  password_updating.py  product_compilation_sorting.py  product_filter_values.py  product_sorting.py  products_filter_types.py  register.py  sort_type.py  user_type.py  user_types.py
app/logic/: consts.py  exceptions.py  memory.py  pwd_hashing.py  queries.py  router.py  utils.py
app/orm/: __init__.py  admin.py  brand.py  bundlable_variation_value.py  bundle.py  bundle_pod_price.py  bundle_price.py  bundle_product_variation_value.py  bundle_variation.py  bundle_variation_pod.py  bundle_variation_pod_amount.py  bundle_variation_pod_price.py  category.py  category_property.py  category_property_type.py  category_property_value.py  category_sku.py  category_to_property_type.py  category_to_variation_type.py  category_variation.py  category_variation_type.py  category_variation_value.py  company.py  company_business_sector_to_category.py  company_image.py  company_num_of_employees.py  company_phone.py  country.py  country_code.py  employees_number.py  number_employees.py  order.py  order_note.py  order_product_variation.py  order_sku_product.py  order_status.py  order_status_history.py  order_with_sku.py  product.py  product_category.py  (+41 more)
app/population/: __init__.py  generator.py  loader.py  main.py  populate.py
app/redisq/: __init__.py  queue.py
app/repositories/: __init__.py  base.py  products.py  users.py
app/schemas/: __init__.py  brand.py  bundlable_variation_value.py  bundle.py  bundle_pod_price.py  bundle_price.py  bundle_product_variation_value.py  bundle_variation.py  bundle_variation_pod.py  bundle_variation_pod_amount.py  bundle_variation_pod_price.py  category.py  category_property.py  category_property_type.py  category_to_property_type.py  category_to_variation_type.py  category_variation_type.py  change_email_upload.py  change_password_upload.py  company.py  company_business_sector_to_category.py  company_data_update_upload.py  company_data_upload.py  company_images_data_upload.py  company_phone_data_update_upload.py  country.py  employees_number.py  exception.py  exceptions.py  jwt.py  login_upload.py  my_email_upload.py  number_employees.py  order.py  order_history.py  order_status.py  order_status_history.py  order_status_id_upload.py  pagination_upload.py  product.py  (+48 more)
app/services/: __init__.py  auth.py
app/static/: categories_example.json
app/store/: _base.py  aws_s3.py  base.py  mail.py  s3.py  store.py
app/utils/: __init__.py  check_image.py  cookies.py  current_datetime.py  database.py  fastapi.py  migrations.py  misc.py  pydantic.py  routers.py  string_generator.py  test_build.py  thumbnail.py  time.py  validators.py
autotests/: test_login.py  test_register.py
autotests (NEED UPDATE)/: test_register.py
classes/: enums.py  exceptions.py  response_models.py
const/: const.py
database/: database.py  init.py  models.py
db/: db_connector.py  models.py
db_population/: cats.csv  const.py  populate.py
docker/: Dockerfile  Dockerfile.alembic  Dockerfile.population  Dockerfile.tests
docker/compose/: .dockerignore  alembic.yml  app.dev.yml  app.prod.yml  app.yml  db.yml  dev.yml  header.yml  main.yml  population.dev.yml  population.yml  redis.yml  tests.db.yml  tests.yml  worker.yml
docs/: depends_style.md
docs/api/: route_style.md  write_own_route.md
logic/: consts.py  controller.py  dependencies.py  exceptions.py  pwd_hashing.py  router.py  tokens.py  utils.py
logic/routes/: __init__.py  categories.py  login.py  logout.py  me.py  (+6 more)
migrations/: env.py
nginx/: default.conf.template  nginx.conf
population/: __init__.py  __main__.py  main.py
scripts/: dependency-installer.sh  mypy.sh  setup.sh
static/: categories_example.json
terraform/: code_pipeline.tf  common_vars.tf  elastic_beanstalk.tf  main.tf  rds.tf  s3.tf
tests/: __init__.py  conftest.py
(+581 files in other folders)
