[tool.poetry]
name = "wb-platform-back"
version = "0.1.0"
description = ""
authors = ["oregu"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "0.87.0"
fastapi-jwt-auth = "^0.5.0"
fastapi-mail = "^1.2.2"
uvicorn = "^0.20.0"
alembic = "^1.9.0"
python-dotenv = "^0.21.0"
boto3 = "^1.26.32"
Pillow = "^9.3.0"
SQLAlchemy = "^1.4.45"
aiomysql = "^0.1.1"
pydantic = {extras = ["email"], version = "^1.10.2"}
pytz = "^2022.7"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
cryptography = "^39.0.0"
colorlog = "^6.7.0"
marshmallow = "^3.19.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
flake8 = "^6.0.0"
pylint = "^2.15.9"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
