[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wb-platform-back"
version = "0.1.0"
description = "The wb back platform"
authors = ["oregu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
cryptography = "^40.0.1"
colorlog = "^6.7.0"
loguru = "^0.6.0"
stringcase = "^1.2.0"
aioboto3 = "^11.1.0"
types-aiobotocore-s3 = "^2.5.0.post1"
fastapi = "^0.95.0"
fastapi-cache2 = "^0.2.1"
fastapi-mail = "^1.2.6"
fastapi-jwt-auth = "^0.5.0"
uvicorn = "^0.21.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
asyncpg = "^0.27.0"
pytz = "^2023.3"
pillow = "^9.5.0"
faker = "^18.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
ruff = "^0.0.256"
isort = "^5.12.0"
mypy = "^1.2.0"

[tool.ruff]
line-length = 99
select = [
    "C4",
    "E",
    "F",
    "T10",
    "T20",
    "Q",
    "RET",
]
ignore = [
    "E501",
]
exclude = [
    ".git",
    ".platform",
    ".venv",
    "alembic",
    "logs",
]
force-exclude = true

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
    \.git
    \.platform
    \.ruff_cache
    \.venv
  | alembic
  | logs
)
'''

[tool.isort]
profile = "black"
src_paths = [
    "app",
]
skip = [
    "alembic",
]

[tool.mypy]
strict = true
disable_error_code = [
    "union-attr",
    "dict-item",
    "import",
    "misc",
]

[[tool.mypy.overrides]]
module = [
    "aioboto3",
    "fastapi_mail",
    "fastapi_jwt_auth",
    "PIL",
    "passlib",
]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "app.orm.core.session",
    "app.core.app.crud.operations.get_by",
    "app.core.app.crud.operations.delete",
    "app.core.app.crud.operations.insert",
    "app.core.app.crud.operations.update",
]
disable_error_code = [
    "arg-type",
    "call-overload",
    "attr-defined",
    "no-untyped-call",
]
