[tool.poetry]
name = "wb-platform-back"
version = "0.1.0"
description = "The wb back platform"
authors = ["oregu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
corecrud = "^0.1.4.1"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
cryptography = "^41.0.0"
colorlog = "^6.7.0"
stringcase = "^1.2.0"
aioboto3 = "^11.1.0"
types-aiobotocore-s3 = "^2.5.0.post1"
starlette-admin = "^0.11.1"
fastapi = "^0.100.0"
fastapi-mail = "^1.2.6"
fastapi-jwt-auth = "^0.5.0"
uvicorn = "^0.23.0"
pydantic = {extras = ["email"], version = "^1.10.7"}
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
asyncpg = "^0.28.0"
pytz = "^2023.3"
pillow = "^10.0.0"
google-auth = "^2.20.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
ruff = "^0.0.282"
isort = "^5.12.0"
mypy = "^1.2.0"

[tool.poetry.group.population.dependencies]
faker = "^19.1.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
httpx = "^0.25.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "*__init__.py",
    "*orm",
    "*schemas",
    "*exc.py",
    "*app.py",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[tool.coverage.html]
directory = "htmlcov"


[tool.ruff]
line-length = 99
select = [
    "C4",
    "E",
    "F",
    "T10",
    "T20",
    "Q",
    "RET",
]
ignore = [
    "E501",
]
exclude = [
    ".git",
    ".platform",
    ".venv",
    "alembic",
    "logs",
]
force-exclude = true

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
    \.git
    \.platform
    \.ruff_cache
    \.venv
  | alembic
  | logs
)
'''

[tool.isort]
profile = "black"
src_paths = [
    "app",
    "population",
    "tests",
]
skip = [
    "alembic",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
disable_error_code = [
    "import",
]
show_error_codes = true
show_error_context = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "aioboto3",
    "fastapi_mail",
    "fastapi_jwt_auth",
    "PIL",
    "passlib",
]
ignore_missing_imports = true
disallow_untyped_defs = true
